@@ -1,3 +1,13 @@
+2008-01-17  Simon Hausmann  <hausmann@webkit.org>
+
+        Reviewed by Holger.
+
+        Minor documentation fixes
+        
+
+        * Api/qwebframe.cpp:
+        * Api/qwebview.cpp:
+
 2008-01-17  Simon Hausmann  <shausman@trolltech.com>
 
         Reviewed by Lars.
